react-front-end/src/App.scss
#root {
  background-color: #b4a4bb;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
  width: auto;
}

form.add-todo {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  column-gap: 5px;
}

.nav,
.profile {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 15px;
  padding-right: 15px;
  align-items: center;
  height: 80px;
  background-color: black;
  column-gap: 10px;
  color: white;
}

.profile {
  padding-right: 0px;
}

.todo-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  width: 70%;
}

.logo,
.title {
  font-family: "Bungee Shade", cursive;
  font-size: 38px;
}

.logo {
  color: white;
}

.todo-items,
.nav,
.trip-list,
.view-trip {
  font-family: "Comfortaa", cursive;
  font-size: 18px;
}

.trip-list {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: auto;
  column-gap: 10px;
  width: 95%;
  font-size: 16px;
}

.trip-photo {
  width: 180px;
  height: auto;
}

.view-trip {
  display: flex;
  flex-direction: column;
  margin: auto;
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 20px;
  padding-bottom: 20px;
  width: 100%;
  height: 80%;
  background-color: rgba(234, 234, 234, 0.726);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
    rgba(0, 0, 0, 0.22) 0px 10px 10px;
}

div.MuiContainer-root.MuiContainer-maxWidthLg.main-container.css-1oqqzyl-MuiContainer-root {
  max-width: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: auto;
  width: 98%;
  height: 100%;
  background-color: #b4a4bb;
  overflow: auto;
  column-gap: 15px;
}

.trip-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 10px;
}

.activities-container {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  height: 100%;
  row-gap: 10px;
  overflow: auto;
  margin-bottom: 10px;
}

.activity {
  background-color: rgb(163 163 163);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 1.5%;
  padding-right: 1.5%;
  min-height: 40px;
  align-items: center;
  align-content: flex-start;
}

.add-activity-btn {
  width: 20%;
  margin: auto;
}

.add-activity {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.total-cost {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.alert-msg {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 30%;
}

.add-trip-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 10px;
}

.two-fields-form {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.two-fields {
  width: 48%;
}

